--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@waits/ui",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ryanwaits/waits-ui.git"
+    "url": "git+https://github.com/ryanwaits/ui.git"
   },
   "keywords": [
     "ui",
     "components"
   ],
   "author": "Ryan Waits",
-  "private": true,
+  "private": false,
   "main": "./lib/cjs/src/index.js",
   "module": "./lib/esm/src/index.js",
   "files": [
