--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@waits/ui",
+  "name": "@ryanwaits/ui",
   "version": "0.3.0",
   "repository": {
     "type": "git",
@@ -74,5 +74,15 @@
     "tailwind-merge": "^1.9.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.5"
-  }
+  },
+  "types": "./lib/cjs/src/index.d.ts",
+  "description": "UI Component Library based off @shadcn/ui",
+  "bugs": {
+    "url": "https://github.com/ryanwaits/ui/issues"
+  },
+  "homepage": "https://github.com/ryanwaits/ui#readme",
+  "directories": {
+    "lib": "lib"
+  },
+  "license": "ISC"
 }
