--- a/package.json
+++ b/package.json
@@ -75,6 +75,10 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.5"
   },
+  "peerDependencies": {
+    "react": "^16.0.0 || ^17.0.0",
+    "react-dom": "^16.0.0 || ^17.0.0"
+  },
   "types": "./lib/cjs/src/index.d.ts",
   "description": "UI Component Library based off @shadcn/ui",
   "bugs": {
